fix(kanban): rearrange swimlanes z-index

--- a/app/styles/modules/kanban/kanban-table.scss
+++ b/app/styles/modules/kanban/kanban-table.scss
@@ -119,7 +119,7 @@ body {
     flex-basis: 2.75rem;
     min-height: 2.75rem;
     position: relative;
-    z-index: $second-layer;
+    z-index: $fourth-layer;
     .kanban-table-inner {
         display: flex;
         overflow: visible;
@@ -409,7 +409,11 @@ body {
     top: 36px;
     transition: all .6 ease;
     width: 100%;
-    z-index: $first-layer;
+    z-index: $second-layer;
+
+    &.unclassified-swimlane {
+        z-index: $third-layer;
+    }
 
     &.folded {
         border-bottom: solid 1px $color-gray200;
